# TiendaOnline-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: __common_deps.py
api/config/: __base.py  __init__.py  constants.py  database.py  email.py  security.py
api/models/: __init__.py  orders.py  products.py  users.py
api/routes/: __init__.py  auth.py  orders.py  products.py  users.py
api/services/: __init__.py  auth.py  email.py  orders.py  products.py  users.py
scripts/: ADMIN_USER_CONF  __init__.py  create_super_user.py  seed_database.py
static/css/: index.css
templates/: account-verification-confirmation.html  account-verification.html  index.html  order-completion.html  password-reset.html
