[tool.poetry]
name = "proyecto-final-backend"
version = "0.1.0"
description = "DevlightsBootcamp3 - Proyecto final - Backend FastAPI MongoDB"
authors = ["andresbonelli <donpipon@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pydantic-mongo = "^2.3.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi-jwt = "^0.3.0"
passlib = "^1.7.4"
authlib = "^1.3.1"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
